# mongoose

./: .gitignore  micro_phase6_eval.json  probe_table_sanity.txt  pyproject.toml
docs/: OVERNIGHT_REPORT_2026-04-26.md  SESSION_HANDOFF_2026-04-18.md  SESSION_HANDOFF_2026-04-21.md  SESSION_HANDOFF_2026-04-23.md  SESSION_HANDOFF_2026-04-25.md  V5_PLAN_2026-04-26.md  ablation_protocol.md  presentation_brief_2026-04-22.md
phase6_holdout_eval/: bp_intervals.json  bp_intervals_smoke.json  comparison_ext.json  comparison_option_a_long.json  comparison_option_a_smoke.json  comparison_option_a_smoke_v2.json  comparison_spike.json  peak_match.json  stratified_option_a_long.json  t2d_intervals.json  v3_spike_epoch_0.json  v3_spike_epoch_1.json  v3_spike_epoch_2.json
scripts/: analyze_v5seq_bins.py  build_molecule_library.py  build_probe_table.py  compare_bp_intervals.py  compare_runs.py  eval_residual.py  eval_sequence.py  evaluate.py  evaluate_bp_intervals.py  evaluate_peak_match.py  evaluate_reference_bp.py  evaluate_t2d_intervals.py  launch_l511_ext.sh  launch_l511_spike.sh  launch_option_a_local.sh  launch_option_a_long.sh  launch_phase6.sh  migrate_cache_warmstart_schema.py  overfit_one_batch.py  plot_random_dataloader_batch.py  plot_tag_interval_bars.py  plot_tag_intervals_comparison.py  plot_tag_intervals_gallery.py  plot_training_curves.py  precompute_all_caches_t2d.sh  precompute_t2d_params.py  preprocess.py  profile_train.py  regen_all_caches.sh  sanity_check_preprocess.py  sanity_check_probe_table.py  stratified_interval_eval.py  train.py  train_residual.py  (+3 more)
(+176 files in other folders)
